Document PPDG/src/objects/Branch_Stats__c.object
<CustomObject>
    <description>Object describes about Rota and Footfall Reports</description>
    <fields>
        <fullName>Additional_Enquiries__c</fullName>
        <label>Additional Enquiries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointments__c</fullName>
        <label>Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <picklist>
            <picklistValues>
                <fullName>SMALL HEATH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDGWARE ROAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHITECHAPEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANCHESTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEICESTER</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Accounts__c</fullName>
        <label>Business Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <label>Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_Transactions__c</fullName>
        <label>Counter Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <formula>CASE(
MOD(DATEVALUE( Date__c ) - DATE(1900, 1, 6), 7),
1, &quot;Sunday&quot;,
2, &quot;Monday&quot;,
3, &quot;Tuesday&quot;,
4, &quot;Wednesday&quot;,
5, &quot;Thursday&quot;,
6, &quot;Friday&quot;,
7, &quot;Saturday&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Account_issues__c</fullName>
        <label>FIT Account issues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Calls__c</fullName>
        <label>Follow Up Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intermediaries_Referrals__c</fullName>
        <label>Intermediaries Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTS_Funded__c</fullName>
        <label>LTS Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Apps__c</fullName>
        <label>Manual Apps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meet_and_Greet__c</fullName>
        <label>Meet and Greet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Decision_Response__c</fullName>
        <label>Online Decision Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Declaration__c</fullName>
        <label>Online Declaration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Personal_Details__c</fullName>
        <label>Online Personal Details</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Sent_To_EBS__c</fullName>
        <label>Online Sent To EBS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POA_COP__c</fullName>
        <label>POA/COP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Selection__c</fullName>
        <label>Product Selection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retention_Applications_Re_keyed__c</fullName>
        <label>Retention Applications Re-keyed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retention_Calls__c</fullName>
        <label>Retention Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telephony_Appointments__c</fullName>
        <label>Telephony Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Branch__c</fullName>
        <formula>TEXT($User.Branch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branch_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Webleads__c</fullName>
        <label>Webleads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user_name__c</fullName>
        <formula>User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>user name</label>
        <type>Text</type>
    </fields>
    <label>Branch Stats</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0}</displayFormat>
        <label>Branch Stats  No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Stats</pluralLabel>
    <recordTypes>
        <fullName>Footfall</fullName>
        <active>true</active>
        <label>Footfall</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rota</fullName>
        <active>true</active>
        <label>Rota</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>